--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/charity-registry.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.donation-tracker_]
+path = 'contracts/donation-tracker_.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
