--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -54,4 +54,9 @@ plan:
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/charity-registry.clar
             clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: donation-tracker_
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/donation-tracker_.clar
+            clarity-version: 2
       epoch: "2.5"
