--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 2.5
 path = 'contracts/donation-tracker_.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.donor-voting]
+path = 'contracts/donor-voting.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
